--- a/plugins/multiproject/multiproject/home/admin/templates/admin_analytics_projects.html
+++ b/plugins/multiproject/multiproject/home/admin/templates/admin_analytics_projects.html
@@ -81,7 +81,7 @@
                 <tr>
                     <td colspan="2" class="buttons">
                         <input type="submit" value="Update" name="update"/>
-                        <input type="submit" class="secondaryInputBtn" value="Reset" name="reset"/>
+                        <input type="submit" class="secondaryButton" value="Reset" name="reset"/>
                     </td>
                 </tr>
             </table>
