--- a/plugins/multiproject/multiproject/home/admin/templates/admin_user_create.html
+++ b/plugins/multiproject/multiproject/home/admin/templates/admin_user_create.html
@@ -34,7 +34,7 @@
                         <td class="label required"><label for="username">User name</label></td>
                         <td>
                             <input type="text" id="username" name="username"  size="60" value="${username}" />
-                            <a id="check" href="#" class="primaryButton">Check availability</a>
+                            <a id="check" href="#" class="secondaryButton">Check availability</a>
                         </td>
                         </tr>
                     <tr>
