--- a/plugins/multiproject/multiproject/home/projectlist/templates/create_form.html
+++ b/plugins/multiproject/multiproject/home/projectlist/templates/create_form.html
@@ -127,11 +127,9 @@ from multiproject.core.configuration import conf
                  </div>
             </div>
 
-            <fieldset class="create_form_block halfWidth left">
-            	<div class="buttons">
-	                <span class="primaryButton">
-	                    <input id="submit_create_form" type="submit" value="Create Project" />
-	                </span>
+            <fieldset class="create_form_block halfWidth left" style="clear: left;">
+            	<div class="buttons" style="margin-top: 10px">
+	               <input id="submit_create_form" type="submit" value="Create Project" class="primaryButton" />
                 </div>
             </fieldset>
         </form>
