--- a/plugins/multiproject/multiproject/project/admin/templates/admin_protocols.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_protocols.html
@@ -61,9 +61,7 @@
     
       <fieldset style="margin-left:10px">
         <div class="buttons">
-          <span class="primaryButton">
-            <input type="submit" name="protocol_update" value="Update" />
-          </span>
+          <input type="submit" name="protocol_update" value="Update" class="primaryButton" />
         </div>
       </fieldset>
     </div>
