--- a/plugins/multiproject/multiproject/project/files/templates/multiproject_files.html
+++ b/plugins/multiproject/multiproject/project/files/templates/multiproject_files.html
@@ -35,7 +35,7 @@ from multiproject.core.configuration import conf
                       <p>Select the row and choose the action.</p></td>
                       <td><div class="mounturl"><div id="map_text">Map network drive</div>
                       <input type="text" value="${dav_url}" name="map_address" id="map_address" readonly="readonly" />
-                      <input class="flippedButton" type="submit" id="copybutton" value="Copy to clipboard"/>
+                      <input class="flippedButton secondaryButton" type="submit" id="copybutton" value="Copy to clipboard"/>
                   </div></td></tr>
               </tbody>
           </table>
