--- a/plugins/multiproject/multiproject/project/membership/templates/membership_request_form.html
+++ b/plugins/multiproject/multiproject/project/membership/templates/membership_request_form.html
@@ -45,10 +45,9 @@
 	            <br />
 	            <br />
 	            <span style="float:right;" id="text_countdown">Write at least <strong class="count">40</strong> more characters</span>
-	            <span class="primaryButton">
-	            	<input type="submit" name="request" value="Request" />
-	            </span>
-	            
+	            <div class="buttons">
+	            	<input type="submit" name="request" value="Request" class="primaryButton"/>
+	            </div>
             </div>
         </fieldset>
     </form>
