--- a/plugins/multiproject/multiproject/project/summary/templates/multiproject_watch.html
+++ b/plugins/multiproject/multiproject/project/summary/templates/multiproject_watch.html
@@ -6,7 +6,9 @@
             <input type="hidden" name="project_id" value="${project_id}" />
             <input type="hidden" name="goto" value="${req.href('')}" />
             <input type="hidden" name="action" value="watch" />
-            <input type="submit" name="watch" value="Follow" />
+            <div class="buttons">
+                <input type="submit" name="watch" value="Follow" class="primaryButton"/>
+            </div>
         </form>
     </div>
 </html>
