--- a/themes/default/templates/diff_options.html
+++ b/themes/default/templates/diff_options.html
@@ -39,9 +39,7 @@
              checked="${options.ignorewhitespace or None}" />
         <label for="ignorewhitespace">Ignore white space changes</label><p/>
   </div>
-  <div class="buttons">
-    <span class="primaryButton">
-      <input type="submit" name="update" value="${_('Update')}" />
-    </span>
+  <div class="buttons primaryButton">
+    <input type="submit" name="update" value="${_('Update')}" />
   </div>
 </div>
