--- a/plugins/multiproject/multiproject/project/admin/templates/admin_news_forum.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_news_forum.html
@@ -20,28 +20,28 @@
       <p/>
       <py:choose>
         <py:when test="showforum == True">
-          <input type="submit" name="hideforum" value="Hide" style="width:80px"/>
+          <input type="submit" name="hideforum" value="Hide" style="width:80px" class="primaryButton"/>
         </py:when>
         <py:otherwise>
-          <input type="submit" name="showforum" value="Show" style="width:80px"/>
+          <input type="submit" name="showforum" value="Show" style="width:80px" class="primaryButton" />
         </py:otherwise>
       </py:choose>
       <span>Forum and announcements in your project's summary page</span><p/>
 
-
       <py:if test="public_exists == True and showforum == True">
         <py:choose>
           <py:when test="allowed == True">
-            <input type="submit" name="disallow" value="Disallow" style="width:80px"/>
+            <input type="submit" name="disallow" value="Disallow" style="width:80px" class="primaryButton" />
           </py:when>
           <py:otherwise>
-            <input type="submit" name="allow" value="Allow" style="width:80px"/>
+            <input type="submit" name="allow" value="Allow" style="width:80px" class="primaryButton" />
           </py:otherwise>
         </py:choose>
         users to comment on announcements<p/>
       </py:if>
       <py:if test="showforum == True">
-        <span>Rename forum to </span><input type="text" name="forumname" /> <input type="submit" name="rename" value="Save" />
+        <span>Rename forum to </span><input type="text" name="forumname" /> 
+        <input type="submit" name="rename" value="Save" class="primaryButton" />
       </py:if>
     </form>
   </body>
