--- a/themes/default/htdocs/css/browser.css
+++ b/themes/default/htdocs/css/browser.css
@@ -16,10 +16,6 @@
   display: block
 }
 
-#prefs .buttons {
-  margin-top: -2.3em
-}
-
 #prefs .choice {
   float: left;
   margin: 0 .6em 0 .3em;
@@ -415,10 +411,8 @@ table.dirlist td.change {
 
 #jumprev #go {
   float: right;
-  height: 26px;
-  margin-top: 0px;
-  width: 70px;
-  margin-left: 2px;
+  height: 24px;
+  margin: 5px 0 0 2px;
 }
 
 #jumprev form span label {
