--- a/themes/default/templates/ticket_change.html
+++ b/themes/default/templates/ticket_change.html
@@ -52,19 +52,13 @@ ${(edited_comment, change.comment)[edited_comment is None]}</textarea>
       </div>
       <input type="hidden" name="cnum_edit" value="${change.cnum}"/>
     </div>
-    <div class="buttons" style="margin-top:5px;">
-      <span class="secondaryButton">
-        <input type="submit" name="preview_comment" value="${_('Preview')}"
-             title="${_('Preview changes to comment %(cnum)s', cnum=change.cnum)}" />
-      </span>
-      <span class="primaryButton" style="margin-right:0;">
-        <input type="submit" name="edit_comment" value="${_('Submit changes')}"
-             title="${_('Submit changes to comment %(cnum)s', cnum=change.cnum)}" />
-      </span>
-      <span class="primaryButton">
-        <input type="submit" name="cancel_comment" value="${_('Cancel')}"
-             title="Cancel comment edit" />
-      </span>
+    <div class="buttons">
+      <input type="submit" name="preview_comment" value="${_('Preview')}"
+             title="${_('Preview changes to comment %(cnum)s', cnum=change.cnum)}" class="secondaryButton"/>
+      <input type="submit" name="edit_comment" value="${_('Submit changes')}"
+             title="${_('Submit changes to comment %(cnum)s', cnum=change.cnum)}" class="primaryButton"/>
+      <input type="submit" name="cancel_comment" value="${_('Cancel')}"
+             title="Cancel comment edit" class="primaryButton"/>
     </div>
   </form>
   <py:choose>
