--- a/themes/default/templates/timeline.html
+++ b/themes/default/templates/timeline.html
@@ -20,6 +20,7 @@
 		<div id="timeline-prefs" class="shaded-box-wrapper right last">
 		<div class="shaded-box">
 		<form id="prefs" method="get" action="">
+      <div id="not_found" style="display: none"><p>No events match your search criteria, change the parameters and try again</p></div>
 			<div class="shaded-box-title">Search events</div>
 			<div class="shaded-box-description">
   	        <label>View changes from <input type="text" size="10" name="from" value="${format_date(fromdate)}" /></label> <br />
